Infinite scroll implemented, trying to resolve jumping when loading

--- a/hackernews-frontend/src/app/story-list/story-list.component.css
+++ b/hackernews-frontend/src/app/story-list/story-list.component.css
@@ -22,3 +22,6 @@
 .mat-warn:hover{
     opacity: 0.7;
 }
+mat-progress-bar {
+    top: 64px;
+}
