--- a/hackernews-frontend/src/app/story/story.component.css
+++ b/hackernews-frontend/src/app/story/story.component.css
@@ -30,9 +30,3 @@ mat-card {
     font-weight: 500;
     cursor: pointer;
 }
-
-@media only screen and (min-width: 1000px) {
-    mat-card {
-        max-width: 60%;
-    }
-}
